Mudanças no open API para Case em cada controller no x-swagger-router-controller , mais completo
